# enhanced_sapiens

./: BOT.sh  BUILD.sh  CLI.sh  Cargo.toml  Dockerfile  EXP.sh  LICENSE-MIT  README.md  deny.toml  environment.yml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot-automerge.yml  dependabot.yml
.github/workflows/: rust.yml
experiments/: analysis.ipynb  prompt.ipynb
sapiens/: CHANGELOG.md  Cargo.toml
sapiens/src/: context.rs  lib.rs  prompt.rs
sapiens/src/chains/: mod.rs  schedulers.rs  tests.rs
sapiens/src/chains/agents/: mod.rs
sapiens/src/chains/agents/ooda/: mod.rs  multistep.rs  one_step.rs
sapiens/src/chains/agents/ooda/snapshots/: sapiens__chains__agents__ooda__multistep__tests__actor_converts_context_to_chat_history.snap  sapiens__chains__agents__ooda__multistep__tests__decider_converts_context_to_chat_history.snap  sapiens__chains__agents__ooda__multistep__tests__observer_converts_context_to_chat_history.snap  sapiens__chains__agents__ooda__multistep__tests__orienter_converts_context_to_chat_history.snap  sapiens__chains__agents__ooda__one_step__tests__it_converts_context_to_chat_history.snap
sapiens/src/models/: mod.rs  openai.rs  tokenizer.json  vertex_ai.rs
sapiens/src/tools/: invocation.rs  mod.rs  toolbox.rs
sapiens/src/tools/snapshots/: sapiens__tools__invocation__tests__find_multiple_invocations.snap
sapiens_bot/: CHANGELOG.md  Cargo.toml
sapiens_cli/: CHANGELOG.md  Cargo.toml
sapiens_derive/: CHANGELOG.md  Cargo.toml
sapiens_exp/: CHANGELOG.md  Cargo.toml
sapiens_tools/: CHANGELOG.md  Cargo.toml
(+45 files in other folders)
